syntax="proto3";

// dictionary message
message DictionaryInfo {
  uint64 id = 1;
  string title = 2;
  string name = 3;
  uint32 status = 4;
  string desc = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message DictionaryDetail {
  uint64 id = 1;
  string title = 2;
  string key = 3;
  string value = 4;
  uint32 status = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
  uint64 dictionary_id = 8;
}

message DictionaryList {
  uint64 total = 1;
  repeated DictionaryInfo data = 2;
}

message DictionaryDetailList {
  uint64 total = 1;
  repeated DictionaryDetail data = 2;
}

message DictionaryDetailReq {
  string name = 1;
}

message DictionaryListReq {
  string title = 1;
  string name = 2;
  uint64 page = 3;
  uint64 page_size = 4;
}

service Core {
  // dictionary management service

  // group: dictionary
  rpc createDictionary (DictionaryInfo) returns (BaseResp);
  // group: dictionary
  rpc updateDictionary (DictionaryInfo) returns (BaseResp);
  // group: dictionary
  rpc deleteDictionary (IDsReq) returns (BaseResp);
  // group: dictionary
  rpc getDictionaryList (DictionaryListReq) returns (DictionaryList);
  // group: dictionary
  rpc getDetailByDictionaryName (DictionaryDetailReq) returns (DictionaryDetailList);
  // group: dictionary
  rpc createDictionaryDetail (DictionaryDetail) returns (BaseResp);
  // group: dictionary
  rpc updateDictionaryDetail (DictionaryDetail) returns (BaseResp);
  // group: dictionary
  rpc deleteDictionaryDetail (IDsReq) returns (BaseResp);

}